add springcloud-api project

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.linxiaomi</groupId>
     <artifactId>springcloud</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>springcloud-api</module>
+    </modules>
 
 
 </project>
