--- a/springcloud-provider-dept-8001/src/main/resources/application.yml
+++ b/springcloud-provider-dept-8001/src/main/resources/application.yml
@@ -25,3 +25,6 @@ eureka:
   client:                                                   # 客户端注册进eureka服务列表内
     service-url:
       defaultZone: http://localhost:7001/eureka
+  instance:
+    instance-id: springcloud-dept8001                       # 自定义服务名称信息
+    prefer-ip-address: true                                 # 访问路径可以显示ip地址
