--- a/springcloud-provider-dept-8001/src/main/resources/application.yml
+++ b/springcloud-provider-dept-8001/src/main/resources/application.yml
@@ -28,3 +28,8 @@ eureka:
   instance:
     instance-id: springcloud-dept8001                       # 自定义服务名称信息
     prefer-ip-address: true                                 # 访问路径可以显示ip地址
+info:
+  app.name: linxiaomi-springcloud
+  company.name: https://github.com/linxiaomi
+  build.artifactId: $project.artifactId$
+  build.version: $project.version$
