--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,6 @@
         <module>springcloud-eureka-7003</module>
         <module>springcloud-provider-dept-8002</module>
         <module>springcloud-provider-dept-8003</module>
-        <module>springcloud-consumer-dept-feigin</module>
         <module>springcloud-consumer-dept-feign</module>
     </modules>
 
@@ -75,6 +74,12 @@
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
                 <version>${log4j.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-feign -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-feign</artifactId>
+                <version>1.4.6.RELEASE</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
