--- a/springcloud-provider-dept-8002/pom.xml
+++ b/springcloud-provider-dept-8002/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>springcloud-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!-- actuator监控信息完善 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
