--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>springcloud-consumer-dept-feign</module>
         <module>springcloud-provider-dept-hystrix-8001</module>
         <module>springcloud-consumer-hystrix-dashboard</module>
+        <module>springcloud-zuul-gateway</module>
     </modules>
 
     <properties>
