--- a/springcloud-config-client-3355/src/main/resources/bootstrap.yml
+++ b/springcloud-config-client-3355/src/main/resources/bootstrap.yml
@@ -4,4 +4,4 @@ spring:
       name: springcloud-config-client      # 需要从GitHub上读取的资源名称，注意没有yml后缀名
       profile: dev
       label: master
-      uri: http://config-3344.com:3344
+      uri: http://config-3344.com:3344     # 本微服务启动后先去找3344号服务，通过SpringCloudConfig获取GitHub地址
